@@ -55,6 +55,13 @@
 #define XP_UNIX
 #endif
 #endif
+
+/*
+ * The manual define of HPUX is to fix bug #46020, nsapi.h needs this to detect HPUX
+ */
+#ifdef __hpux
+#define HPUX
+#endif
  
 /*
  * NSAPI includes
